// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api spec should set content of the store via declarative api 1`] = `
<div>
  Left
</div>
`;

exports[`api spec should set content of the store via declarative api 2`] = `
<div>
  <p>
    Center
  </p>
</div>
`;

exports[`api spec should set content of the store via declarative api 3`] = `
<div>
  <div>
    test3
    <span>
      Right
    </span>
  </div>
</div>
`;

exports[`api spec should set content of the store via imperative api 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "Left",
    }
  }
/>
`;

exports[`api spec should set content of the store via imperative api 2`] = `
<p>
  Center
</p>
`;

exports[`api spec should set content of the store via imperative api 3`] = `
<div>
  test3
  <span>
    Right
  </span>
</div>
`;
